OpenFaaS/openfaas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfaas-service
  namespace: openfaas
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - name: openfaas-port
      protocol: TCP
      port: 8080
      targetPort: 8080
